working on apps

--- a/index.html
+++ b/index.html
@@ -24,7 +24,36 @@
             </main>
        
        <h1 class="title">Projects</h1>
-            <main id="applications"></main>
+            <main id="applications">
+                <div class="app">
+                    <img src="assets/images/earthquakes.png" alt="">
+                    <div class="info">
+                        <h3>App Name</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a></div>
+                </div>
+                <div class="app">
+                    <img src="assets/images/earthquakes.png" alt="">
+                    <div class="info">
+                        <h3>App Name</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a></div>
+                </div>
+                <div class="app">
+                    <img src="assets/images/earthquakes.png" alt="">
+                    <div class="info">
+                        <h3>App Name</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a></div>
+                </div>
+                <div class="app">
+                    <img src="assets/images/earthquakes.png" alt="">
+                    <div class="info">
+                        <h3>App Name</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a></div>
+                </div>
+            </main>
             <main id="contactMe"></main>
         </div>
 
