added links to skill coins

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <nav>Data Analyst</nav>
+    <nav><h1>Data Analyst
+        <div></div>
+    </h1></nav>
         <div id="container">
             <main id="aboutMe">
                 <figure>
