--- a/index.html
+++ b/index.html
@@ -1,66 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
 </head>
+
 <body>
-    <nav><h1>Data Analyst
-        <div></div>
-    </h1></nav>
-        <div id="container">
-            <main id="aboutMe">
-                <figure>
-                    <img src="assets/images/Yakup Resim.jpg" alt="">
-                    <figcaption>Yakup Altinisik</figcaption>
-                </figure>
+    <nav>
+        <h1>Data Analyst
+            <div></div>
+        </h1>
+    </nav>
+    <div id="container">
+        <main id="aboutMe">
+            <figure>
+                <img src="assets/images/Yakup Resim.jpg" alt="">
+                <figcaption>Yakup Altinisik</figcaption>
+            </figure>
 
-                <div class="details">
-                    <p>Dynamic LT and Executive Officer with a robust background in data analytics, physics, and extensive real estate expertise. Eager to apply disciplined leadership, strategic planning, and analytical skills to challenges in machine learning, AI, and data science.
-                    </p>
-                </div>
+            <div class="details">
+                <p>
+                    I'm Yakup Altinisik, a Data Analyst with a Master's in Physics and recent certification from Rice
+                    University's Data Analytics Boot Camp. My unique background combines scientific rigor with
+                    cutting-edge data skills.</p>
+                <p>
+                    As owner of Goldenlight Realty, I apply data-driven strategies to real estate investments. My
+                    leadership as a 2LT in the Texas State Guard further enhances my ability to drive strategic
+                    initiatives.
+                </p>
+                <p>
+                    I'm passionate about leveraging my diverse expertise in physics, data science, business, and
+                    leadership to solve complex challenges. Always eager to learn, I'm excited to push the boundaries of
+                    what's possible with data analytics and AI.
+                    Let's connect and explore how we can use data to drive innovation and success!
+                </p>
+            </div>
 
-                <div id="skills"></div>
-            </main>
-       
-       <h1 class="title">Projects</h1>
-            <main id="applications">
-                <div class="app">
-                    <img src="assets/images/earthquakes.png" alt="">
-                    <div class="info">
-                        <h3>App Name</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a></div>
+            <div id="skills"></div>
+        </main>
+
+        <h1 class="title">Projects</h1>
+        <main id="applications">
+            <div class="app">
+                <img src="assets/images/earthquakes.png" alt="">
+                <div class="info">
+                    <h3>App Name</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a>
                 </div>
-                <div class="app">
-                    <img src="assets/images/earthquakes.png" alt="">
-                    <div class="info">
-                        <h3>App Name</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a></div>
+            </div>
+            <div class="app">
+                <img src="assets/images/earthquakes.png" alt="">
+                <div class="info">
+                    <h3>App Name</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a>
                 </div>
-                <div class="app">
-                    <img src="assets/images/earthquakes.png" alt="">
-                    <div class="info">
-                        <h3>App Name</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a></div>
+            </div>
+            <div class="app">
+                <img src="assets/images/earthquakes.png" alt="">
+                <div class="info">
+                    <h3>App Name</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a>
                 </div>
-                <div class="app">
-                    <img src="assets/images/earthquakes.png" alt="">
-                    <div class="info">
-                        <h3>App Name</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a></div>
+            </div>
+            <div class="app">
+                <img src="assets/images/earthquakes.png" alt="">
+                <div class="info">
+                    <h3>App Name</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a>
                 </div>
-            </main>
-            <main id="contactMe"></main>
-        </div>
+            </div>
+        </main>
+        <main id="contactMe"></main>
+    </div>
 
 
 
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
