--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <nav>
-        <h1>Data Analyst
-            <div></div>
+        <h1><span class="hide">D</span><span class="hide">a</span><span class="hide">t</span><span class="hide">a</span> <span class="hide">A</span><span class="hide">n</span><span class="hide">a</span><span class="hide">l</span><span class="hide">y</span><span class="hide">s</span><span class="hide">t</span>
         </h1>
     </nav>
+
     <div id="container">
         <main id="aboutMe">
             <figure>
@@ -43,41 +43,28 @@
         </main>
 
         <h1 class="title">Projects</h1>
-        <main id="applications">
-            <div class="app">
-                <img src="assets/images/earthquakes.png" alt="">
-                <div class="info">
-                    <h3>App Name</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a>
-                </div>
-            </div>
-            <div class="app">
-                <img src="assets/images/earthquakes.png" alt="">
-                <div class="info">
-                    <h3>App Name</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a>
-                </div>
-            </div>
-            <div class="app">
-                <img src="assets/images/earthquakes.png" alt="">
-                <div class="info">
-                    <h3>App Name</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a>
-                </div>
-            </div>
-            <div class="app">
-                <img src="assets/images/earthquakes.png" alt="">
-                <div class="info">
-                    <h3>App Name</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <a href="" class="github"><img src="" alt=""></a><a href="" class="website"><img src="" alt=""></a>
-                </div>
-            </div>
+        
+        <main id="applications"></main>
+        <main id="contactMe">
+            <a href="mailto:jacob@goldenlightrealty.com" target="blank_">
+                <figure>
+                    <img src="assets/images/icons/email.png" alt="">
+                    <figcaption>jacob@goldenlightrealty.com</figcaption>
+                </figure>
+            </a>
+            <a href="https://www.linkedin.com/in/yakup-altinisik-765b601a" target="blank_">
+                <figure>
+                    <img src="assets/images/icons/linkedIn.png" alt="">
+                    <figcaption>LinkedIn</figcaption>
+                </figure>
+            </a>
+            <a href="https://github.com/44jacob" target="blank_">
+                <figure>
+                    <img src="assets/images/icons/github.png" alt="">
+                    <figcaption>Github</figcaption>
+                </figure>
+            </a>
         </main>
-        <main id="contactMe"></main>
     </div>
 
 
