completed desktop view

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <nav>
-        <h1><span class="hide">D</span><span class="hide">a</span><span class="hide">t</span><span class="hide">a</span> <span class="hide">A</span><span class="hide">n</span><span class="hide">a</span><span class="hide">l</span><span class="hide">y</span><span class="hide">s</span><span class="hide">t</span>
+        <h1><span class="hide">D</span><span class="hide">a</span><span class="hide">t</span><span class="hide">a</span>
+            <span class="hide">A</span><span class="hide">n</span><span class="hide">a</span><span
+                class="hide">l</span><span class="hide">y</span><span class="hide">s</span><span class="hide">t</span>
         </h1>
     </nav>
 
@@ -28,7 +30,7 @@
                     cutting-edge data skills.</p>
                 <p>
                     As owner of Goldenlight Realty, I apply data-driven strategies to real estate investments. My
-                    leadership as a 2LT in the Texas State Guard further enhances my ability to drive strategic
+                    leadership as a LT in the Texas State Guard further enhances my ability to drive strategic
                     initiatives.
                 </p>
                 <p>
@@ -42,34 +44,35 @@
             <div id="skills"></div>
         </main>
 
+        <div id="divider1"></div>
+
         <h1 class="title">Projects</h1>
-        
         <main id="applications"></main>
-        <main id="contactMe">
-            <a href="mailto:jacob@goldenlightrealty.com" target="blank_">
-                <figure>
-                    <img src="assets/images/icons/email.png" alt="">
-                    <figcaption>jacob@goldenlightrealty.com</figcaption>
-                </figure>
-            </a>
-            <a href="https://www.linkedin.com/in/yakup-altinisik-765b601a" target="blank_">
-                <figure>
-                    <img src="assets/images/icons/linkedIn.png" alt="">
-                    <figcaption>LinkedIn</figcaption>
-                </figure>
-            </a>
-            <a href="https://github.com/44jacob" target="blank_">
-                <figure>
-                    <img src="assets/images/icons/github.png" alt="">
-                    <figcaption>Github</figcaption>
-                </figure>
-            </a>
-        </main>
-    </div>
+            <main id="contactMe">
+                <a href="mailto:jacob@goldenlightrealty.com" target="blank_">
+                    <figure>
+                        <img src="assets/images/icons/email.png" alt="">
+                        <figcaption>jacob@goldenlightrealty.com</figcaption>
+                    </figure>
+                </a>
+                <a href="https://www.linkedin.com/in/yakup-altinisik-765b601a" target="blank_">
+                    <figure>
+                        <img src="assets/images/icons/linkedIn.png" alt="">
+                        <figcaption>LinkedIn</figcaption>
+                    </figure>
+                </a>
+                <a href="https://github.com/44jacob" target="blank_">
+                    <figure>
+                        <img src="assets/images/icons/github.png" alt="">
+                        <figcaption>Github</figcaption>
+                    </figure>
+                </a>
+            </main>
+        </div>
 
 
 
-    <script src="assets/js/script.js"></script>
+        <script src="assets/js/script.js"></script>
 </body>
 
 </html>
